[gd_scene load_steps=6 format=2]

[ext_resource path="res://Font/Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/MenuPopup.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/LevelUI.gd" type="Script" id=3]
[ext_resource path="res://Scenes/GameOver.tscn" type="PackedScene" id=4]
[ext_resource path="res://TileMap/TreasureChests.png" type="Texture" id=5]

[node name="GUI" type="CanvasLayer"]

[node name="LevelUI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="ColorRect" parent="LevelUI"]
margin_left = 130.0
margin_top = 10.0
margin_right = 190.0
margin_bottom = 25.0
color = Color( 0, 0, 0, 0.627451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_timer" type="Label" parent="LevelUI/Timer"]
margin_right = 60.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="ColorRect" parent="LevelUI"]
margin_left = 10.0
margin_top = 10.0
margin_right = 60.0
margin_bottom = 40.0
rect_scale = Vector2( 0.5, 0.5 )
color = Color( 0, 0, 0, 0.627451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_pause" type="Label" parent="LevelUI/Pause"]
margin_right = 50.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
text = "PAUSE
ESC"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelData" type="ColorRect" parent="LevelUI"]
margin_left = 255.0
margin_top = 10.0
margin_right = 310.0
margin_bottom = 48.0
color = Color( 0, 0, 0, 0.627451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_L" type="Label" parent="LevelUI/LevelData"]
margin_left = 5.0
margin_right = 35.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 1 )
text = "LVL"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level_Nb" type="Label" parent="LevelUI/LevelData"]
margin_left = 30.0
margin_right = 50.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 1 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="LevelUI/LevelData"]
texture = ExtResource( 5 )
centered = false
offset = Vector2( 4, 16 )
region_enabled = true
region_rect = Rect2( 5, 5, 20, 20 )
region_filter_clip = true

[node name="Arti_Nb" type="Label" parent="LevelUI/LevelData"]
margin_left = 30.0
margin_top = 15.0
margin_right = 50.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 1 )
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuPopup" parent="." instance=ExtResource( 2 )]

[node name="GameOver" parent="." instance=ExtResource( 4 )]
